--- a/source/Moonghy.Core/Moonghy.Core.csproj
+++ b/source/Moonghy.Core/Moonghy.Core.csproj
@@ -4,18 +4,17 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D2AC5B20-4A7D-4C70-BD5B-1CD6EDC3C230}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <ProjectGuid>{167E98DD-83EB-4DF7-8AC1-89726A8273FD}</ProjectGuid>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Moonghy</RootNamespace>
-    <AssemblyName>Moonghy</AssemblyName>
+    <RootNamespace>Moonghy.Core</RootNamespace>
+    <AssemblyName>Moonghy.Core</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
     <RestorePackages>true</RestorePackages>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -25,7 +24,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -49,29 +47,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Runtime\AggregateOperationFactory.cs" />
-    <Compile Include="ComponentModel\IOperationFactory.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="InsertOperation.cs" />
+    <Compile Include="Operation.cs" />
+    <Compile Include="OperationHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Runtime\InsertOperationFactory.cs" />
-    <Compile Include="Runtime\UpdateOperationFactory.cs" />
+    <Compile Include="UpdateOperation.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Moonghy.Core\Moonghy.Core.csproj">
-      <Project>{167e98dd-83eb-4df7-8ac1-89726a8273fd}</Project>
-      <Name>Moonghy.Core</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Moonghy.Test\Moonghy.Test.csproj">
-      <Project>{cfa707f2-e8ca-49d9-b672-03e289c40df7}</Project>
-      <Name>Moonghy.Test</Name>
-    </ProjectReference>
-  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
+  <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
