--- a/source/Moonghy/App.config
+++ b/source/Moonghy/App.config
@@ -1,6 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
-    </startup>
+  <configSections>
+    <section name="moonghy" 
+             type="Moonghy.Configuration.MoonghySection, Moonghy"/>
+  </configSections>
+
+  <moonghy>
+    <settings server="mongodb://localhost:27100" />
+  </moonghy>
+
+
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+  </startup>
 </configuration>
