--- a/source/Moonghy/Moonghy.csproj
+++ b/source/Moonghy/Moonghy.csproj
@@ -41,6 +41,7 @@
       <HintPath>..\packages\mongocsharpdriver.1.8.1\lib\net35\MongoDB.Driver.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -49,6 +50,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Configuration\MoonghySettingsElement.cs" />
+    <Compile Include="Configuration\MoonghySection.cs" />
     <Compile Include="Runtime\AggregateOperationFactory.cs" />
     <Compile Include="ComponentModel\IOperationFactory.cs" />
     <Compile Include="Program.cs" />
@@ -70,6 +73,7 @@
       <Name>Moonghy.Test</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
